Fix references and organize dependencies after splitting policy-endpoints and message-bus
Issue-ID: POLICY-5131
Change-Id: I7542caaccc130bc6120cc105d31a1e1e951c8cff
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>